Fix resize event handler leak, automatically remove images after they stop being visible, hide scrollbars

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,7 +27,7 @@ body {
 	background: url(../images/bg.jpg) repeat 0 0;
   font-size: 62.5%;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 img {
